[metadata]
name = ignition_api
version = 8.1.50.post3
description = Ignition Scripting API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://ignition-devs.github.io/ignition-api-8.1
author = César Román
author_email = cesar@coatl.dev
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Manufacturing
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2 :: Only
    Programming Language :: Python :: 2.7
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Testing :: Mocking
keywords =
    hmi
    ignition
    inductive automation
    scada
project_urls =
    Documentation = https://docs.inductiveautomation.com/docs/8.1/appendix/scripting-functions
    Funding = https://github.com/sponsors/cesarcoatl
    Source = https://github.com/ignition-devs/ignition-api-8.1
    Tracker = https://github.com/ignition-devs/ignition-api-8.1/issues

[options]
packages = find:
install_requires =
    enum34
    java-api
python_requires = ==2.7.18
package_dir =
    =src

[options.packages.find]
where = src
